--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -242,18 +242,20 @@ YOUR ADS
             <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
             <script>
               const controls = [
-                "rewind",
-                "audio",
-                "play",
-                "fast-forward",
-                "progress",
-                "current-time",
-                "duration",
-                "captions",
-                "settings",
-                "pip",
-                "airplay",
-                "fullscreen",
+                'play-large',
+                'rewind','play', 
+                'fast-forward', 
+                'progress', 
+                'current-time',
+                'duration',
+                'mute',
+                'volume',
+                'captions',
+                'settings',
+                'pip',
+                'airplay',
+                'download',
+                'fullscreen'
               ];
               document.addEventListener("DOMContentLoaded", () => {
                 const player = Plyr.setup("#myVideo", {
