--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -303,7 +303,7 @@ YOUR ADS
         </a>
     </h2>
      </div>
-        
+  <script>      
     const currentUrl = window.location.href;
     const finalUrl = currentUrl.replace("/watch/", "/");
 
