--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -354,14 +354,15 @@ YOUR ADS
         }
     });
     </script> 
-©  <script type="text/JavaScript">
-                var theDate=new Date() 
-                    document.write(theDate.getFullYear()) 
-            </script> Copyright :
-                <a class="bg-clip-text text-[10px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/AkshayChand08">ARS official</a>
-                <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
-                All right reserved
-            </div>   
+</div>
+	    <center>
+    <h2>
+        <a href="https://telegram.me/arsOfficial10">
+            <img src="https://telegra.ph/file/c79142d54468d8a1cb238.jpg" alt="BotszList" width="150" height="75">
+        </a>
+    </h2>
+     </div>
+  <script>
 </footer>    
 </body>
 </html>
