--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -357,8 +357,7 @@ YOUR ADS
 </div>
 	    <center>
     <h2>
-        <a href="https://telegram.me/arsOfficial10">
-            <img src="https://telegra.ph/file/c79142d54468d8a1cb238.jpg" alt="BotszList" width="150" height="75">
+        <a href="https://telegram.me/arsOfficial10" alt="© ARS Official 2023-2024 - All rights reserved" width="150" height="75">
         </a>
     </h2>
      </div>
