--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -354,13 +354,13 @@ YOUR ADS
     });
     </script> 
 </div>
-	    <center>
-    <h2>
-        <a href="https://telegram.me/arsOfficial10" alt="© ARS Official 2023-2024 - All rights reserved" width="150" height="75">
-        </a>
-    </h2>
-     </div>
-  <script>
+            </div>
+            <div class="justify-content-center align-items-center w-100 d-flex mb-3">
+                <div class="row d-flex w-100 justify-content-center align-items-center">
+                    <div class="col-lg-8 col-10  py-2 text-center bg-danger rounded-4 text-sm wow animate__animated animate__FadeIn">
+                            link expire will be 10 days.
+                    </div>
+		</div>
 </footer>    
 </body>
 </html>
