--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -353,14 +353,28 @@ YOUR ADS
         }
     });
     </script> 
-</div>
-            </div>
-            <div class="justify-content-center align-items-center w-100 d-flex mb-3">
-                <div class="row d-flex w-100 justify-content-center align-items-center">
-                    <div class="col-lg-8 col-10  py-2 text-center bg-danger rounded-4 text-sm wow animate__animated animate__FadeIn">
-                            link expire will be 10 days.
+<!-- Copyright -->
+                </div> 
+<!--                 <div class=" justify-center items-center text-center w-full text-center flex ">
+                    <div  class="text-gray-400 text-center sm:-m-1 -ms-4 m-2 p-2">
+                        <h5>
+                            <a class="font-bold" href="https://telegram.me/real_MoviesAdda2" target="_blank">MoviesAdda : </a>Run and managed by <a href="https://telegram.me/Aadil_h" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/LazyDeveloperr" target="_blank">Indu(<a href="https://telegram.me/LazyDeveloperr" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">LazyDeveloper</a>)
+                            </a> 
+                        </h5>
                     </div>
-		</div>
-</footer>    
+                </div> -->
+            </div>
+            <hr>
+            <div class="text-center text-xs p-3 dark:text-light text-light gap-2" style="background-color: rgba(0, 0, 0, 0.2);">
+                <!-- For LazyDeveloper // credit --- Please don't remove footer credit -->
+            ©  <script type="text/JavaScript">
+                var theDate=new Date() 
+                    document.write(theDate.getFullYear()) 
+            </script> Copyright :
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/AkshayChand08">ARS Official</a>
+                <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
+                2023-2024 -All right reserved
+            </div>   
+</footer>
 </body>
 </html>
