--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://i.ibb.co/XzCyycV/20230807-211612.png">
+    <link rel="icon" href="https://i.ibb.co/SyZdV8n/20231106-184147.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title> {{ filename }} ARS official</title>
@@ -22,7 +22,7 @@
         position: relative;
         height: 55px;
         color: #ffffff;
-        background-color: #1a1717;
+        background-color: #580a8c;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
         display: flex;
         justify-content: space-between;
@@ -36,7 +36,7 @@
     }
 
     .black-text {
-        color: white;
+        color: green;
     }
 
     .right-content {
@@ -113,8 +113,8 @@
     #button-container2 button#dl-btn,
     #button-container2 button#tgfile-btn,
     #button-container2 button#tg-btn {
-        background-color: #1a1717; 
-        color: #ffffff; 
+        background-color: #580a8c; 
+        color: #45f70a; 
     }
 
     #button-container2 {
@@ -218,7 +218,7 @@
 <body>   
 <div id="banner">
     <div class="left-content">
-        <span class="black-text">𝐈 𝐃𝐢𝐬𝐤</span>
+        <span class="black-text">𝗦𝘁𝗿𝗲𝗮𝗺𝗗𝗶𝘀𝗸</span>
     </div>
 </div>
 <div style="margin-bottom: 7px; margin-top: 7px"></div>
