--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -22,7 +22,7 @@
         position: relative;
         height: 55px;
         color: #ffffff;
-        background-color: #580a8c;
+        background-color: #a860f0;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
         display: flex;
         justify-content: space-between;
@@ -36,7 +36,7 @@
     }
 
     .black-text {
-        color: green;
+        color: white;
     }
 
     .right-content {
@@ -113,7 +113,7 @@
     #button-container2 button#dl-btn,
     #button-container2 button#tgfile-btn,
     #button-container2 button#tg-btn {
-        background-color: #580a8c; 
+        background-color: #a860f0; 
         color: #45f70a; 
     }
 
