--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -352,7 +352,20 @@ YOUR ADS
             e.preventDefault();
         }
     });
-    </script> 
-</footer>
+</script>
+       <!-- <div>
+          <center>
+
+YOUR ADS 
+
+          </center>  --> 
+<footer>
+        <p style="font-size: 15px; color:#7b89a3;padding-top: 30px ;margin:0px 10px; border-top: 1px solid #c2cee3;">
+      This website only provide service that help you convert your video to link easily. Stream disk is a cloud storage service that lets you save files online and sync them to your devices You can report the file/video that contains a problem like copyright, porn, violence, etc, we will not provide service for those file/videos. Send DMCA: Report <a href="https://telegram.dog/iPapdiscussion" style="color: darkorange"><b>Here</b></a>
+      <p style="text-align:center">&copy; Copyright  </p>
+      <!--
+      YOUR ADS 
+      -->
+</footer>    
 </body>
 </html>
