--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -110,7 +110,7 @@
         color: #ffffff; 
     }
 
-    #button-container2 button#dl-btn,
+    #button-container1 button#dl-btn,
     #button-container2 button#tgfile-btn,
     #button-container2 button#tg-btn {
         background-color: #a860f0; 
@@ -288,20 +288,11 @@ YOUR ADS
             </button>
             <button id="pi-btn" onclick="playOnlinepi()"><img src="https://i.ibb.co/JsDNHgz/c0C4vnAa.png" alt="playit_logo" width="140px">
             </button>
-        </div>
-        <div style="margin-bottom: 5px; margin-top: 10px">Download Options :</div>
+	</div>
 	    <div id="button-container2">
-            <button id="dl-btn" onclick="lazyDownload()">
-                <i class="fas fa-download"></i> Download Now
+            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/2sVg1kD/button-logo-60202b35af498.png" alt="download_logo" width="150px">
 	    </button>
        </div>
-	    <center>
-    <h2>
-        <a href="https://telegram.me/arsOfficial10">
-            <img src="https://graph.org/file/b57cdba982191a25db535.jpg" alt="BotszList" width="150" height="75">
-        </a>
-    </h2>
-     </div>
   <script>      
     const currentUrl = window.location.href;
     const finalUrl = currentUrl.replace("/watch/", "/");
@@ -360,9 +351,9 @@ YOUR ADS
 
           </center>  --> 
 <footer>
-        <p style="font-size: 15px; color:#7b89a3;padding-top: 30px ;margin:0px 10px; border-top: 1px solid #c2cee3;">
+        <p style="font-size: 10px; color:#7b89a3;padding-top: 30px ;margin:0px 10px; border-top: 1px solid #c2cee3;">
       This website only provide service that help you convert your video to link easily. Stream disk is a cloud storage service that lets you save files online and sync them to your devices You can report the file/video that contains a problem like copyright, porn, violence, etc, we will not provide service for those file/videos. Send DMCA: Report <a href="https://telegram.dog/iPapdiscussion" style="color: darkorange"><b>Here</b></a>
-      <p style="text-align:center">&copy; Copyright  </p>
+      <p style="text-align:center">&copy; StreamDisk 2023-2024 </p>
       <!--
       YOUR ADS 
       -->
