--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -290,7 +290,7 @@ YOUR ADS
             </button>
 	</div>
 	    <div id="button-container1">
-            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/pr1463H/20231106-220226.png" alt="download_logo" width="200px">
+            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/WsnT2Hd/Download-logo.png" alt="download_logo" width="110px" height="40px"/>
 	    </button>
        </div>
   <script>      
