--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -290,7 +290,7 @@ YOUR ADS
             </button>
 	</div>
 	    <div id="button-container1">
-            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/mTBGmwb/Rrrr.png" alt="download_logo" width="130px" height="50px"/>
+            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/6ZDKJvn/Kirti.png" alt="download_logo" width="110px" height="30px"/>
 	    </button>
        </div>
   <script>      
