--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -290,7 +290,7 @@ YOUR ADS
             </button>
 	</div>
 	    <div id="button-container1">
-            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/j5p3tk1/20231106-203446.png" alt="download_logo" width="3264px" height="822px"/>
+            <button id="dl-btn" onclick="lazyDownload()"><img src="https://i.ibb.co/pdb6Fdy/Kirti1.png" alt="download_logo" width="110px" height="30px"/>
 	    </button>
        </div>
   <script>      
