--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -269,8 +269,9 @@ YOUR ADS
 	  <p style="font-size: 7px; color:#f20a0a;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
     <div class="containerbox"> 
      <div id="info-box">
-     <p style="font-size: 10px; color:#120e0e;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
-     <p style="font-size: 10px; color:#120e0e;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
+     <p style="font-size: 10px; color:#120e0e;">ꜰɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
+     <p style="font-size: 10px; color:#120e0e;">ꜰɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
+     <p style="font-size: 10px; color:#120e0e;">ꜰɪʟᴇ ᴅᴜʀᴀᴛɪᴏɴ : {{file_extension}}</p>
      <p style="font-size: 10px; color:#120e0e;">Shares by : Team ARS & i Papcorn Prime Bot</p>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
