--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -305,7 +305,7 @@ YOUR ADS
 
     function playOnlineMx() {
         const finalLinkUrl = finalUrl;
-        const mxUrl = "intent:${finalLinkUrl}#Intent;package=com.mxtech.videoplayer.ad;S.title={{file_name}};end";
+        const mxUrl = 'intent:${{src}}#Intent;package=com.mxtech.videoplayer.ad;S.title={{file_name}};end';
         window.location.href = mxUrl;
     }
     
