--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -305,7 +305,7 @@ YOUR ADS
 
     function playOnlineMx() {
         const finalLinkUrl = finalUrl;
-        const openMx = `intent:${finalLinkUrl}#Intent;package=com.mxtech.videoplayer.ad;end`;
+        const openMx = `intent:${finalLinkUrl}#Intent;package=com.mxtech.videoplayer.ad;S.title={{filename}};end`;
         window.location.href = openMx;
     }
     
