--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -202,7 +202,7 @@
             <div class="justify-content-center align-items-center w-100 d-flex">
                     <div class="row d-flex w-100 justify-content-center align-items-center">
                         <div class="col-lg-8 col-10  py-2 text-center bg-primary rounded-4 text-sm wow animate__animated animate__FadeIn">
-                            Video not playing ? possibly because your browser or the player doesn't support codec please watch online & download.
+                            Video not playing ? possibly because your browser or the player doesn't support codes please watch online & download.
                     </div>
                 </div>
             </div>
